# Cpp-Mastery-Hub

./: .gitignore  CONTRIBUTING.md  PROJECT_STRUCTURE.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  package.json  setup.sh
backend/: .eslintrc.json  Dockerfile  package.json  tsconfig.json
backend/prisma/: schema.prisma
backend/src/: server.ts
backend/src/api/middleware/: auth.ts  errorHandler.ts  logging.ts  ratelimit.ts  validation.ts
backend/src/api/routes/: admin.ts  analysis.ts  auth.ts  code.ts  community.ts  learning.ts  users.ts
backend/src/api/sockets/: code-execution.ts
backend/src/config/: database.ts  index.ts  redis.ts
backend/src/models/: Achievement.ts  CodeSnippet.ts  Course.ts  ForumPost.ts  User.ts
backend/src/services/: storage.ts  user-service.ts
backend/src/services/analyzer/: analysis-service.ts
backend/src/services/auth/: auth-service.ts  jwt.ts
backend/src/services/compiler/: execution-service.ts
backend/src/services/learning/: learning-service.tsx  progress.tsx
backend/src/services/notification/: notification-service.ts
backend/src/types/: api.ts  auth.ts  cache.ts  code.ts  collaboration.ts  community.ts  config.ts  events.ts  express.d.ts  index.ts  learning.ts  monitoring.ts  validation.ts  websocket.ts
backend/src/utils/: errors.ts  logger.ts
backend/tests/: auth.test.ts
backend/tests/integration/: api.test.ts
backend/tests/unit/: models.test.ts  services.test.ts
cpp-engine/: .clang-format  .clang-tidy  CMakeLists.txt  Dockerfile  conanfile.txt
cpp-engine/include/: server.hpp
cpp-engine/include/analyzer/: static_analyzer.hpp
cpp-engine/include/compiler/: execution_engine.hpp
cpp-engine/include/parser/: ast_parser.hpp
cpp-engine/include/utils/: config.hpp  file_utils.hpp  logger.hpp  string_utils.hpp
cpp-engine/include/visualizer/: memory_visualizer.hpp
cpp-engine/scripts/: dev-server.sh
cpp-engine/src/: main.cpp  server.cpp
cpp-engine/src/analyzer/: code_analyzer.cpp  static_analyzer.cpp
cpp-engine/src/compiler/: execution_engine.cpp
cpp-engine/src/parser/: ast_parser.cpp
cpp-engine/src/utils/: config.cpp  file_utils.cpp  logger.cpp  string_utils.cpp
cpp-engine/src/visualizer/: memory_visualizer.cpp
cpp-engine/tests/unit/: analyzer.test.cpp  parser.test.cpp
docker/backend/: Dockerfile
docker/cpp-engine/: Dockerfile
docker/database/: init.sql
docker/frontend/: Dockerfile  default.conf  nginx.conf
docker/nginx/: nginx.conf
docs/api/: README.md  authentication.md  code-execution.md  learning.md
docs/architecture/: README.md
docs/user-guides/: README.md  getting-started.md
frontend/: .eslintrc.json  Dockerfile  next.config.js  package.json  tailwind.config.js  tsconfig.json
frontend/src/components/Auth/: AuthGuard.tsx  ForgotPassword.tsx  LoginForm.tsx  RegisterForm.tsx
frontend/src/components/CodeEditor/: AnalysisPanel.tsx  CodeEditor.tsx  ExecutionOutput.tsx  SettingsPanel.tsx  ToolBar.tsx
frontend/src/components/Community/: CommentSystem.tsx  ForumList.tsx  Leaderboard.tsx  PostView.tsx  UserProfile.tsx
frontend/src/components/Dashboard/: ActivityFeed.tsx  Dashboard.tsx  ProgressCard.tsx  QuickActions.tsx  StatsCard.tsx
frontend/src/components/Layout/: Footer.tsx  Header.tsx  MainLayout.tsx  Sidebar.tsx
frontend/src/components/LearningPath/: CourseCard.tsx  CourseList.tsx  ExerciseView.tsx  LessonView.tsx  ProgressTracker.tsx
frontend/src/components/Notification/: Notification.tsx  NotificationList.tsx  NotificationSettings.tsx
frontend/src/components/Search/: SearchFilters.tsx  SearchModal.tsx  SearchResults.tsx
frontend/src/components/UI/: Badge.tsx  Button.tsx  ErrorBoundary.tsx  Input.tsx  Loading.tsx  Modal.tsx  Toast.tsx
frontend/src/components/Visualizer/: MemoryVisualizer.tsx
frontend/src/hooks/: useAuth.ts  useCodeAnalysis.ts  useCodeExecution.ts  useDebounce.ts  useLocalStorage.ts  useNotifications.ts  useTheme.ts  useWebSocket.ts
frontend/src/pages/: dashboard.tsx  index.tsx
frontend/src/pages/api/: health.ts
frontend/src/pages/auth/: forgot-password.tsx  login.tsx  register.tsx
frontend/src/pages/code/: collaborate.tsx  index.tsx  snippets.tsx
frontend/src/pages/community/: [postId].tsx  forums.tsx  index.ts
frontend/src/pages/learn/: [courseId].tsx  index.tsx
frontend/src/pages/learn/[courseId]/: [lessonId].tsx
frontend/src/services/: analytics.ts  api.ts  auth.ts  socket.ts
frontend/src/styles/: components.css  global.css  monaco.css
frontend/src/types/: index.ts
frontend/src/utils/: cn.ts  constants.ts  formatting.ts  helpers.ts  monaco-config.ts  validation.ts
frontend/tests/components/: CodeEditor.test.tsx  Dashboard.test.tsx
frontend/tests/hooks/: useAuth.test.ts
scripts/deploy/: production.sh  staging.sh
tests/e2e/: auth.spec.ts  code-execution.spec.ts  community.spec.ts  learning.spec.ts
tests/integration/: auth.test.ts  code-editor.test.ts  database.test.ts  full-stack.test.ts  learning-flow.test.ts  security.test.ts  setup.ts
tests/performance/: load-testing.js
